force-app/main/default/objects/Site__c/fields/Account_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Account_Administrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Administrator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Administrator Sites</relationshipLabel>
    <relationshipName>AccountAdministratorSites</relationshipName>
    <type>Lookup</type>
</CustomField>