force-app/main/default/objects/Site__c/fields/Additional_billing_notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_billing_notes__c</fullName>
    <label>Additional billing notes</label>
    <type>TextArea</type>
</CustomField>