force-app/main/default/objects/Site__c/fields/Camera_Make__c.field-meta.xml
<CustomField>
    <fullName>Camera_Make__c</fullName>
    <label>Camera Make</label>
    <type>TextArea</type>
</CustomField>