force-app/main/default/objects/Site__c/fields/Camera_Model__c.field-meta.xml
<CustomField>
    <fullName>Camera_Model__c</fullName>
    <label>Camera Model</label>
    <type>TextArea</type>
</CustomField>