force-app/main/default/objects/Site__c/fields/Data_integrations_required_other__c.field-meta.xml
<CustomField>
    <fullName>Data_integrations_required_other__c</fullName>
    <inlineHelpText>Data integrations required other than P.O.S</inlineHelpText>
    <label>Data integrations required</label>
    <type>TextArea</type>
</CustomField>