force-app/main/default/objects/Site__c/fields/Hardware_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Requirements__c</fullName>
    <label>Hardware Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>