force-app/main/default/objects/Site__c/fields/Headset_Audio_Type__c.field-meta.xml
<CustomField>
    <fullName>Headset_Audio_Type__c</fullName>
    <label>Headset Audio Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>