force-app/main/default/objects/Site__c/fields/HME_Password__c.field-meta.xml
<CustomField>
    <fullName>HME_Password__c</fullName>
    <label>HME Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>