force-app/main/default/objects/Site__c/fields/HME_Type__c.field-meta.xml
<CustomField>
    <fullName>HME_Type__c</fullName>
    <label>HME Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>