force-app/main/default/objects/Site__c/fields/HME_Username__c.field-meta.xml
<CustomField>
    <fullName>HME_Username__c</fullName>
    <label>HME Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>