force-app/main/default/objects/Site__c/fields/Install_Contact__c.field-meta.xml
<CustomField>
    <fullName>Install_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Install Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Install Contact Sites</relationshipLabel>
    <relationshipName>InstallContactSites</relationshipName>
    <type>Lookup</type>
</CustomField>