force-app/main/default/objects/Site__c/fields/Number_of_Cameras__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cameras__c</fullName>
    <label>Number of Cameras</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>