force-app/main/default/objects/Site__c/fields/NVR_DVR_Make__c.field-meta.xml
<CustomField>
    <fullName>NVR_DVR_Make__c</fullName>
    <label>NVR DVR Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>