force-app/main/default/objects/Site__c/fields/NVR_DVR_Password__c.field-meta.xml
<CustomField>
    <fullName>NVR_DVR_Password__c</fullName>
    <label>NVR DVR Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>