force-app/main/default/objects/Site__c/fields/NVR_DVR_Record_In_Parallel_With_SRD__c.field-meta.xml
<CustomField>
    <fullName>NVR_DVR_Record_In_Parallel_With_SRD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NVR DVR Record In Parallel With SRD</label>
    <type>Checkbox</type>
</CustomField>