force-app/main/default/objects/Site__c/fields/NVR_DVR_Required_as_POE__c.field-meta.xml
<CustomField>
    <fullName>NVR_DVR_Required_as_POE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NVR DVR Required as POE</label>
    <type>Checkbox</type>
</CustomField>