force-app/main/default/objects/Site__c/fields/NVR_DVR_Username__c.field-meta.xml
<CustomField>
    <fullName>NVR_DVR_Username__c</fullName>
    <label>NVR DVR Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>