force-app/main/default/objects/Site__c/fields/Permission_to_Reset_NVR_and_Cameras__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_Reset_NVR_and_Cameras__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permission to Reset NVR and Cameras</label>
    <type>Checkbox</type>
</CustomField>