force-app/main/default/objects/Site__c/fields/Point_of_Sale_System__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Sale_System__c</fullName>
    <description>The Point of Sale System used by the Customer at this site</description>
    <label>Point of Sale System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>