force-app/main/default/objects/Site__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>Shipping address can be different from Site Address</description>
    <label>Shipping Address</label>
    <type>Address</type>
</CustomField>