force-app/main/default/objects/Site__c/fields/Site_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Open_Date__c</fullName>
    <label>Site Open Date</label>
    <type>Date</type>
</CustomField>