force-app/main/default/objects/Site__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/Honolulu</fullName>
                <label>(GMT-10:00) Hawaii Standard Time</label>
            </value>
            <value>
                <fullName>America/Anchorage</fullName>
                <label>(GMT-09:00) Alaska Standard Time</label>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
                <label>(GMT-08:00) Pacific Standard Time</label>
            </value>
            <value>
                <fullName>America/Denver</fullName>
                <label>(GMT-07:00) Mountain Standard Time</label>
            </value>
            <value>
                <fullName>America/Phoenix</fullName>
                <label>(GMT-07:00) Mountain Standard Time (No DST)</label>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
                <label>(GMT-06:00) Central Standard Time</label>
            </value>
            <value>
                <fullName>America/New_York</fullName>
                <label>(GMT-05:00) Eastern Standard Time</label>
            </value>
            <value>
                <fullName>America/Halifax</fullName>
                <label>(GMT-04:00) Atlantic Standard Time</label>
            </value>
            <value>
                <fullName>America/St_Johns</fullName>
                <label>(GMT-03:30) Newfoundland Standard Time</label>
            </value>
            <value>
                <fullName>Europe/London</fullName>
                <label>(GMT+00:00) Greenwich Mean Time</label>
            </value>
            <value>
                <fullName>Asia/Taipei</fullName>
                <label>(GMT+08:00) Taipei Standard Time</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>