force-app/main/default/objects/Site__c/fields/Who_is_Installing__c.field-meta.xml
<CustomField>
    <fullName>Who_is_Installing__c</fullName>
    <label>Who is Installing?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I am installing</fullName>
            </value>
            <value>
                <fullName>Third Party install</fullName>
            </value>
            <value>
                <fullName>Solink is installing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>