force-app/main/default/objects/Site__c/fields/Zoom_IP__c.field-meta.xml
<CustomField>
    <fullName>Zoom_IP__c</fullName>
    <label>Zoom IP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>